gnome-shell/_common.scss
/* ... */
  .window-close {
    -shell-close-overlap: 16px;
    &:rtl { -st-background-image-shadow: 2px 2px 6px rgba(0,0,0,0.5); }
  }

/* NETWORK DIALOGS */

.nm-dialog {
  max-height: 34em;
  min-height: 31em;
  min-width: 32em;
}

  .nm-dialog-content {
    spacing: 20px;
    padding: 24px;
  }
  .nm-dialog-header-hbox { spacing: 10px; }
  .nm-dialog-airplane-box { spacing: 12px; }

  .nm-dialog-airplane-headline {
    font-weight: bold;
    text-align: center;
  }

  .nm-dialog-airplane-text { color: $fg_color; }
  .nm-dialog-header-icon { icon-size: 32px; }
  .nm-dialog-scroll-view { border: 2px solid $borders_color; background: $bg_color; }
  .nm-dialog-header { font-weight: bold; }

  .nm-dialog-item {
    font-size: 110%;
    border-bottom: 1px solid $borders_color;
    padding: 12px;
    spacing: 20px;
  }

  .nm-dialog-item:selected {
    background-color: $selected_bg_color;
    color: $selected_fg_color;
  }

  .nm-dialog-icons { spacing: .5em; }
  .nm-dialog-icon { icon-size: 16px; }
  .no-networks-label { color: #999999; }
  .no-networks-box { spacing: 12px; }

/* OVERVIEW */

#overview,.controls-manager, .secondary-monitor-workspaces {
  spacing: 24px; //
}

#overviewGroup {
  background-color: $bg_color;
}

.overview-controls {
  padding-bottom: 32px;
}

.window-picker { //container around window thumbnails
  -horizontal-spacing: 16px;
  -vertical-spacing: 16px;

  &.external-monitor { padding: 16px; }
}

.window-clone-border {
  border: 4px solid transparentize($selected_bg_color, .7);
  border-radius: 0px;
  // For window decorations with round corners we can't match
  // the exact shape when the window is scaled. So apply a shadow
  // to fix that case
  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.3);
}
.window-caption {
  spacing: 20px;
  color: $fg_color;
  background-color: $topbar_bg_color;
  border-radius: 7px;
  padding: 4px 8px;
}

//search entry
.search-entry {
  width: 320px;
  padding: 9px;
  border-radius: 10px;
  border-color: transparent;

  .search-entry-icon { icon-size: 1em; padding: 0 4px; color: transparentize($fg_color,.3); }

}

//search results

%search-section-content-item {  
  background-color: transparent;
  &:focus,
  &:hover,
  &:selected {
    background-color: transparentize($osd_fg_color, .9);
    transition-duration: 200ms;
  }

  &:active,
  &:checked {
    background-color: transparentize(darken($osd_bg_color, 10%), .1);
  }
}

#searchResultsBin {
  max-width: 1000px;
}

#searchResultsContent {
  padding-left: 20px;
  padding-right: 20px;
  spacing: 16px;
}

.search-section { spacing: 16px; } // This should be equal to #searchResultsContent spacing

.search-section-content { 
  background-color: transparent;
  border-radius: 0;
  border: none;
  box-shadow: none;
  // This is the space between the provider icon and the results container
  spacing: 32px; 
}

.search-statustext { // "no results"
  @extend %status_text;
}
.list-search-results { spacing: 3px; }

.search-section-separator { height: 2px; background-color: $gray; }

.list-search-result-content { spacing: 30px; }
.list-search-result-title { color: lighten($topbar_color,5%); spacing: 12px; }
.list-search-result-description { color: transparentize(lighten($topbar_color,15%), 0.5); }
.list-search-provider-details { width: 150px; color: lighten($topbar_color,5%); margin-top: 0.24em; }
.list-search-provider-content { spacing: 20px; }
.search-provider-icon { padding: 15px; }

  //Icon tile
  .search-provider-icon,
  .list-search-result {
    @extend %search-section-content-item;
  }


/* DASHBOARD */
  
.dash-background {
  background-color: $main_dark;
}

.dash-separator {
  width: 1px;
  background-color: $gray;
}

.dash-label { //osd tooltip
  border-radius: 7px;
  padding: 4px 12px;
  color: $topbar_color;
  background-color: $topbar_bg_color;
  text-align: center;
  -x-offset: 8px;
}

/* App Vault/Grid */
.icon-grid {
  spacing: 30px;
  -shell-grid-horizontal-item-size: 136px;
  -shell-grid-vertical-item-size: 136px;

  .overview-icon { icon-size: 96px; }
}

//.app-display { spacing: 20px; }

.system-action-icon {
  background-color: black;
  color: white;
  border-radius: 99px;
  icon-size: 48px;
}

.app-view-controls { //favorties | all toggle container
  padding-bottom: 32px;
}
.app-view-control { //favorties | all toggle button
  padding: 4px 32px;
  &:checked { @include button(active); }
  &:first-child {
    border-right-width: 0;
    border-radius: 3px 0 0 3px;
  }
  &:last-child {
    border-radius: 0 3px 3px 0;
  }
}
.app-well-app,
.app-well-app.app-folder,
.show-apps,
.grid-search-result,
.overview-tile,
.dash-item-container .overview-tile {
  background-color: transparent;
  border: none;
  & .overview-icon {
    @extend %icon_tile;
  }

  &:hover .overview-icon,
  &:focus .overview-icon,
  &:selected .overview-icon {
    background-color: lighten($bg_color, 7%);
    transition-duration: 0ms;
    border-image: none;
    background-image: none;
  }

  &:active .overview-icon,
  &:checked .overview-icon {
    background-color:  lighten($bg_color, 7%);
    box-shadow: inset $depth2;
    color: $fg_color;
  }

}

.app-well-app-running-dot, .app-grid-running-dot { //running apps indicator
  width: 5px; height: 5px;
  background-color: #8fbcbb;
  border-radius: 5px !important;
  box-shadow: 0px 0px 5px 4px $selected_bg_color;
}

%icon_tile {
  background-color: transparent;
  color: $selected_fg_color;
  //padding: 7px 6px;
  border: none;
  transition-duration: 100ms;
  text-align: center;
  box-shadow: none;
  border-radius: 18px;
  padding: 8px;
}

/* App Folders */
.app-well-app.app-folder, .app-folder .overview-icon {
  background-color: lighten($bg_color, 5%);
  border-radius: 18px;
}
/* ... */

